[project]
name = "web-exporter"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "requests>=2.31.0",
    "BeautifulSoup4>=4.12.2",
    "html2text>=2020.1.16",
    "toml>=0.10.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
